# SVG-Converter-C-SKIA

./: README.md
C++ skia/: CMakeLists.txt  Makefile.txt  input.json  main.cpp  secret.txt.txt
